
2017-01-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y (accept_body): check that PROMPT and SIZE clauses are not set
	  for ACCEPT OMITTED (as these are ignored at run-time)
	* typeck.c (cb_emit_accept): bugfix - extended ACCEPT wasn't used if the 
	  only attributes set were: timeout || prompt || size_is
	* cobc.c (cobc_sig_handler): fixed TODO about unused var
	* cobc.c (process)[WIFSIGNALED]: use cob_raise instead of cobc_sig_handler

2017-01-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c, cobc.h: new variable current_compile_time for resolving all
	  compilation dates, set by call to libcob's cob_get_current_date_and_time
	* typeck.c (cb_build_registers): use time from current_compile_time
	  providing a higher precision and is identical to the listing which is
	  requested by COBOL 2002+
	* cobc.c, cobc.h, codegen.h: renamed cb_oc_build_stamp to
	  cb_cobc_build_stamp

2017-01-02 Brian Tiffin <btiffin@gnu.org>

	* cobc.h: test cb_warn_unfinished in CB_UNFINISHED message macro.

2017-01-02  Ron Norman <rjn@inglenet.com>

	* cobc.c, warning.def:
	  renamed cb_warn_external_val to cb_warn_ignored_initial_val

2016-12-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: changes for -verbose, optional argument for verbose level,
	  -vv output shows information from the compiler, -vvv from linker,
	  -v -help shows help from compiler/linker,
	  -### shows external commands but doesn't execute them
	* cobc.c (cobc_sig_handler): only ask for bug report if the signal isn't
	  a user-requested one
	* codegen.c (codegen): reset pic_cache pointer
	* cobc.c (xref_print): corrected size of numbuf

2016-12-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c: disabled nested ODO as the current implementation
	  has too many flaws (see re-opened FR #99)

2016-12-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c (main): bugs #346 moved compiler specific COB_CFLAGS from